--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,3 +8,6 @@ python-dotenv==1.0.1        # To manage environment variables
 django-environ==0.12.0      # (Optional) Alternative to dotenv
 dj-database-url==2.2.0      # Useful if deploying on Render/Heroku
 gunicorn==23.0.0            # For production WSGI server
+python-decouple==3.8
+sqlparse==0.3.1
+pandas==2.2.3
